--- a/WorkTime.Web/Views/Invoices/Create.cshtml
+++ b/WorkTime.Web/Views/Invoices/Create.cshtml
@@ -193,6 +193,9 @@
                     disableCreate();
                     $("#hourlyWage").html(value.HourlyWage);
                     wage = Number(value.HourlyWage);
+                    if (getProjectId() != -0) {
+                        $("#Bonus").val(value.Bonus);
+                    }
                 }
             });
         }
