--- a/WorkTime.Web/Views/Shared/_Layout.cshtml
+++ b/WorkTime.Web/Views/Shared/_Layout.cshtml
@@ -15,8 +15,8 @@
         <partial name="_NavBar" />
     </header>
     <partial name="_SideBar" />
-    <div id="mainContainer" class="container noscroll">
-        <main role="main" class="pb-3">
+    <div id="mainContainer">
+        <main role="main" class="pb-3 container-fluid">
             @RenderBody()
         </main>
     </div>
