--- a/WorkTime.Web/Views/Tasks/Details.cshtml
+++ b/WorkTime.Web/Views/Tasks/Details.cshtml
@@ -28,7 +28,7 @@
             Текст задачи
         </dt>
         <dd >
-            <textarea readonly rows="7" class="form-control">@Model.TaskText</textarea>
+            <textarea readonly rows="7" class="form-control" style="background-color: #fff">@Model.TaskText</textarea>
         </dd>
         <dt class = "col-sm-2">
             Количество часов
