--- a/WorkTime.Web/Views/Shared/_NavBar.cshtml
+++ b/WorkTime.Web/Views/Shared/_NavBar.cshtml
@@ -8,12 +8,18 @@
 
     <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light box-shadow">
         <div class="container-fluid">
-            <div>
-                <button class="btn light-element-hover" type="button" onclick="toggleSideBar()">
+            <button class="btn light-element-hover" type="button" onclick="toggleSideBar()">
                     <i class="fa fa-bars light-element" aria-hidden="true"></i>
                 </button>
-                <a class="navbar-brand align-middle light-element" style="font-weight: 500;" asp-area="" asp-controller="Home" asp-action="Index">WorkTime</a>
-            </div>
+                <a class="navbar-brand align-middle light-element" style="font-weight: 500;" asp-area="" asp-controller="Home" asp-action="Index">
+                    <object 
+                        id="navLogo"
+                        type="image/svg+xml"
+                        data="~/resources/logo_v4.svg"
+                    >
+                    </object>
+                    WorkTime
+                    </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                 aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
