--- a/WorkTime.Web/Views/Shared/_NavBar.cshtml
+++ b/WorkTime.Web/Views/Shared/_NavBar.cshtml
@@ -11,37 +11,16 @@
             <button class="btn light-element-hover" type="button" onclick="toggleSideBar()">
                     <i class="fa fa-bars light-element" aria-hidden="true"></i>
                 </button>
-                <a class="navbar-brand align-middle light-element" style="font-weight: 500;" asp-area="" asp-controller="Home" asp-action="Index">
-                    <object 
-                        id="navLogo"
-                        type="image/svg+xml"
-                        data="~/resources/logo_v4.svg"
-                    >
-                    </object>
+                <a class="navbar-brand align-middle light-element" asp-area="" asp-controller="Home" asp-action="Index">
+                    <img id="navLogo"
+                        src="~/resources/logo.svg"
+                    />
                     WorkTime
                     </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                 aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
-            @{/*
-            <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
-            <ul class="navbar-nav flex-grow-1">
-            <li class="nav-item">
-            <a class="nav-link align-middle px-0" asp-area="" asp-controller="Tasks"
-            asp-action="MyTasks" asp-route-id="@UserInfo.GetMyId()">
-            <i class="fs-4 bi-house"></i> <span class="ms-1 d-none d-sm-inline text-dark">Мои задачи</span>
-            </a>
-            </li>
-            <li class="nav-item">
-            <a class="nav-link align-middle px-0" asp-area="" asp-controller="Invoices"
-            asp-action="MyInvoices" asp-route-id="@UserInfo.GetMyId()">
-            <i class="fs-4 bi-house"></i> <span class="ms-1 d-none d-sm-inline text-dark">Мои счета</span>
-            </a>
-            </li>
-            </ul>
-                </div>*/
-            }
             <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                 <ul class="navbar-nav flex-grow-1">
                     
