--- a/WorkTime.Web/Views/Home/Index.cshtml
+++ b/WorkTime.Web/Views/Home/Index.cshtml
@@ -7,9 +7,57 @@
 
 @if (SignInManager.IsSignedIn(User))
 {
-    <div class="text-center" style="margin-top: 100pt">
-        <h1>Начальная страница</h1>
-        <p>Надо что-то сюда добавить будет</p>
+    <!--
+        hello, what do you looking for?
+        ⠀⠀⠀⠀⠀._⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀__.
+    ⠀⠀⠀⠀⠀⠀⠀⠀/ \"-.⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀,-",'/⠀
+    ⠀⠀⠀⠀⠀⠀⠀(⠀⠀⠀\⠀,"--.__.--".,'⠀/⠀⠀
+    ⠀⠀⠀⠀⠀⠀⠀=---Y(_i.-'⠀⠀|-.i_)---=
+    ⠀⠀⠀⠀⠀⠀f⠀,⠀⠀"..'/\\v/|/|/\⠀⠀,⠀l
+    ⠀⠀⠀⠀⠀⠀l//⠀⠀,'|/⠀⠀⠀V⠀/⠀/||⠀⠀\\j
+    ⠀⠀⠀⠀⠀⠀⠀"--;⠀/⠀db⠀⠀⠀⠀⠀db|/---"
+    ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀|⠀\⠀YY⠀⠀⠀,⠀YY//
+    ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀'.\>_⠀⠀⠀(_),"'⠀__
+    ⠀⠀⠀⠀⠀⠀⠀⠀.-"⠀⠀⠀⠀"-.-."⠀I,"⠀⠀`.
+    ⠀⠀⠀⠀⠀⠀⠀⠀\.-""-.⠀(⠀,⠀)⠀(⠀\⠀⠀⠀|
+    ⠀⠀⠀⠀⠀⠀⠀⠀(⠀⠀⠀⠀⠀l⠀⠀`"'⠀⠀-'-._j
+    ⠀__,---_⠀'._."⠀.⠀⠀.⠀⠀⠀⠀\
+    (__.--_-'.⠀⠀,⠀⠀:⠀⠀'⠀⠀\⠀⠀'-.
+    ⠀⠀⠀⠀,'⠀.'⠀⠀/⠀⠀⠀|⠀⠀⠀\⠀⠀\⠀⠀\⠀"-
+    ⠀⠀⠀⠀⠀"--.._____t____.--'-""'
+    ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀/⠀⠀/⠀⠀`.⠀".
+    ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀/⠀":⠀⠀⠀⠀⠀\'⠀'.
+    ⠀⠀⠀⠀⠀⠀⠀⠀⠀.'⠀⠀(⠀⠀⠀⠀⠀⠀⠀\⠀⠀⠀:⠀
+    ⠀⠀⠀⠀⠀⠀⠀⠀⠀|⠀⠀⠀⠀l⠀⠀⠀⠀⠀⠀j⠀⠀⠀⠀"-.
+    ⠀⠀⠀⠀⠀⠀⠀⠀⠀l_;_;I⠀⠀⠀⠀⠀⠀l____;_I
+    -->
+    <div class="container row" id="start-screen-container" style="position: relative">
+        <div class="w-25 p-0 m-0">
+            <div class="w-75 h-100 p-4 start-screen-card">
+                <img class="float-end" src="~/resources/ruble.png">
+                <b class="h2 fs-1">За этот месяц <br> Вы заработали</b>
+                <br>
+                <b class="h1 h1 card-text">11111</b> <b class="ps-3 h1 card-text">₽</b>
+                <div>
+                    <a class="float-end text-decoration-none" href="#"><b class="h3" style="color: #47522c;">Перейти к счетам</b></a>
+                    <br>
+                </div>
+                
+            </div>
+        </div>
+        <div class="w-75 p-0 m-0">
+            <div class="w-75 h-100 p-4 start-screen-card">
+                <img class="float-end" src="~/resources/ruble.png">
+                <b class="h2 fs-1">Для Вас доступно <br> к выполнению</b>
+                <br>
+                <b class="h1 h1 card-text">5</b> <b class="ps-3 h1 card-text">задач</b>
+                <div>
+                    <a class="float-end text-decoration-none" href="#"><b class="h3" style="color: #47522c;">Перейти к задачам</b></a>
+                    <br>
+                </div>
+
+            </div>
+        </div>
     </div>
 }
 else
