--- a/WorkTime.Web/Views/Invoices/Details.cshtml
+++ b/WorkTime.Web/Views/Invoices/Details.cshtml
@@ -93,7 +93,7 @@
             Работник
         </dt>
         <dd class = "col-sm-10">
-            @UserInfo.GetName(Model.UserId)
+            @UserInfo.GetUserName(Model.UserId)
         </dd>
     </dl>
 </div>
