--- a/WorkTime.Web/Views/Invoices/Index.cshtml
+++ b/WorkTime.Web/Views/Invoices/Index.cshtml
@@ -129,7 +129,7 @@
                             <span>На имя:</span>
                         </dt>
                         <dd class="col-6">
-                            @UserInfo.GetName(item.User.Id)
+                            @UserInfo.GetUserName(item.User.Id)
                         </dd>
                         <dt class="col-4">
                             <span>Проект:</span>
@@ -180,7 +180,7 @@
                             <span>На имя:</span>
                         </dt>
                         <dd class="col-6">
-                            @UserInfo.GetName(item.User.Id)
+                            @UserInfo.GetUserName(item.User.Id)
                         </dd>
                         <dt class="col-4">
                             <span>Проект:</span>
@@ -230,7 +230,7 @@
                             <span>На имя:</span>
                         </dt>
                         <dd class="col-6">
-                            @UserInfo.GetName(item.User.Id)
+                            @UserInfo.GetUserName(item.User.Id)
                         </dd>
                         <dt class="col-4">
                             <span>Проект:</span>
