--- a/WorkTime.Web/Views/Invoices/MyInvoices.cshtml
+++ b/WorkTime.Web/Views/Invoices/MyInvoices.cshtml
@@ -47,7 +47,7 @@
                             <span>На имя:</span>
                         </dt>
                         <dd class="col-6">
-                            @UserInfo.GetName(item.User.Id)
+                            @UserInfo.GetUserName(item.User.Id)
                         </dd>
                         <dt class="col-4">
                             <span>Проект:</span>
@@ -107,7 +107,7 @@
                             <span>На имя:</span>
                         </dt>
                         <dd class="col-6">
-                            @UserInfo.GetName(item.User.Id)
+                            @UserInfo.GetUserName(item.User.Id)
                         </dd>
                         <dt class="col-4">
                             <span>Проект:</span>
@@ -163,7 +163,7 @@
                             <span>На имя:</span>
                         </dt>
                         <dd class="col-6">
-                            @UserInfo.GetName(item.User.Id)
+                            @UserInfo.GetUserName(item.User.Id)
                         </dd>
                         <dt class="col-4">
                             <span>Проект:</span>
