--- a/WorkTime.Web/Views/Shared/_Layout.cshtml
+++ b/WorkTime.Web/Views/Shared/_Layout.cshtml
@@ -10,7 +10,32 @@
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     
 </head>
-<body>
+<body> @{/*
+        <!--
+        hello, what do you looking for?
+        ⠀⠀⠀⠀⠀._⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀__.
+        ⠀⠀⠀⠀⠀⠀⠀⠀/ \"-.⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀,-",'/⠀
+        ⠀⠀⠀⠀⠀⠀⠀(⠀⠀⠀\⠀,"--.__.--".,'⠀/⠀⠀
+        ⠀⠀⠀⠀⠀⠀⠀=---Y(_i.-'⠀⠀|-.i_)---=
+        ⠀⠀⠀⠀⠀⠀f⠀,⠀⠀"..'/\\v/|/|/\⠀⠀,⠀l
+        ⠀⠀⠀⠀⠀⠀l//⠀⠀,'|/⠀⠀⠀V⠀/⠀/||⠀⠀\\j
+        ⠀⠀⠀⠀⠀⠀⠀"--;⠀/⠀db⠀⠀⠀⠀⠀db|/---"
+        ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀|⠀\⠀YY⠀⠀⠀,⠀YY//
+        ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀'.\>_⠀⠀⠀(_),"'⠀__
+        ⠀⠀⠀⠀⠀⠀⠀⠀.-"⠀⠀⠀⠀"-.-."⠀I,"⠀⠀`.
+        ⠀⠀⠀⠀⠀⠀⠀⠀\.-""-.⠀(⠀,⠀)⠀(⠀\⠀⠀⠀|
+        ⠀⠀⠀⠀⠀⠀⠀⠀(⠀⠀⠀⠀⠀l⠀⠀`"'⠀⠀-'-._j
+        ⠀__,---_⠀'._."⠀.⠀⠀.⠀⠀⠀⠀\
+        (__.--_-'.⠀⠀,⠀⠀:⠀⠀'⠀⠀\⠀⠀'-.
+        ⠀⠀⠀⠀,'⠀.'⠀⠀/⠀⠀⠀|⠀⠀⠀\⠀⠀\⠀⠀\⠀"-
+        ⠀⠀⠀⠀⠀"--.._____t____.--'-""'
+        ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀/⠀⠀/⠀⠀`.⠀".
+        ⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀/⠀":⠀⠀⠀⠀⠀\'⠀'.
+        ⠀⠀⠀⠀⠀⠀⠀⠀⠀.'⠀⠀(⠀⠀⠀⠀⠀⠀⠀\⠀⠀⠀:⠀
+        ⠀⠀⠀⠀⠀⠀⠀⠀⠀|⠀⠀⠀⠀l⠀⠀⠀⠀⠀⠀j⠀⠀⠀⠀"-.
+        ⠀⠀⠀⠀⠀⠀⠀⠀⠀l_;_;I⠀⠀⠀⠀⠀⠀l____;_I
+        -->*/
+    }
     <header>
         <partial name="_NavBar" />
     </header>
