--- a/WorkTime.Web/Views/Shared/_LoginPartial.cshtml
+++ b/WorkTime.Web/Views/Shared/_LoginPartial.cshtml
@@ -9,7 +9,7 @@
 @if (SignInManager.IsSignedIn(User))
 {
     <li class="nav-item">
-            <a class="nav-link light-element" style="font-weight: 500;" asp-area="Identity" asp-page="/Account/Manage/Index" title="Настройки пользователя">@UserInfo.GetName()</a>
+            <a class="nav-link light-element" style="font-weight: 500;" asp-area="Identity" asp-page="/Account/Manage/Index" title="Настройки пользователя">@UserInfo.GetUserName()</a>
     </li>
     <li class="nav-item">
         <form  class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Action("Index", "Home", new { area = "" })">
