--- a/WorkTime.Web/Views/Tasks/Index.cshtml
+++ b/WorkTime.Web/Views/Tasks/Index.cshtml
@@ -83,7 +83,7 @@
                             </dd>
 
                             <dd class="">
-                                <span style="font-weight: 700;">Исполнитель:</span> @UserInfo.GetName(item.PerformerId)
+                                <span style="font-weight: 700;">Исполнитель:</span> @UserInfo.GetUserName(item.PerformerId)
                             </dd>
                             <dd class="">
                                 @if (item.ProjectId != null)
@@ -122,7 +122,7 @@
                             </dd>
 
                             <dd class="">
-                                <span style="font-weight: 700;">Исполнитель:</span> @UserInfo.GetName(item.PerformerId)
+                                <span style="font-weight: 700;">Исполнитель:</span> @UserInfo.GetUserName(item.PerformerId)
                             </dd>
                             <dd class="">
                                 @if (item.ProjectId != null)
@@ -161,7 +161,7 @@
                             </dd>
 
                             <dd class="">
-                                <span style="font-weight: 700;">Исполнитель:</span> @UserInfo.GetName(item.PerformerId)
+                                <span style="font-weight: 700;">Исполнитель:</span> @UserInfo.GetUserName(item.PerformerId)
                             </dd>
                             <dd class="">
                                 @if (item.ProjectId != null)
@@ -200,7 +200,7 @@
                             </dd>
 
                             <dd class="">
-                                <span style="font-weight: 700;">Исполнитель:</span> @UserInfo.GetName(item.PerformerId)
+                                <span style="font-weight: 700;">Исполнитель:</span> @UserInfo.GetUserName(item.PerformerId)
                             </dd>
                             <dd class="">
                                 @if (item.ProjectId != null)
