--- a/WorkTime.Web/Views/Shared/_Layout.cshtml
+++ b/WorkTime.Web/Views/Shared/_Layout.cshtml
@@ -10,7 +10,7 @@
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     
 </head>
-<body> @{/*
+<body> 
         <!--
         hello, what do you looking for?
         ⠀⠀⠀⠀⠀._⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀__.
@@ -34,8 +34,8 @@
         ⠀⠀⠀⠀⠀⠀⠀⠀⠀.'⠀⠀(⠀⠀⠀⠀⠀⠀⠀\⠀⠀⠀:⠀
         ⠀⠀⠀⠀⠀⠀⠀⠀⠀|⠀⠀⠀⠀l⠀⠀⠀⠀⠀⠀j⠀⠀⠀⠀"-.
         ⠀⠀⠀⠀⠀⠀⠀⠀⠀l_;_;I⠀⠀⠀⠀⠀⠀l____;_I
-        -->*/
-    }
+        -->
+    
     <header>
         <partial name="_NavBar" />
     </header>
